--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ description = "Extract QRCode and Barcode from image file in storage bucket"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "pyzbar==0.1.9",
-    "image==1.5.33",
+    "zxing-cpp==2.3.0",
+    "pillow==12.0.0",
+    "numpy==2.2.6",
     "uipath==2.1.183"
 ]
